# archivooor

./: .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.MD  README.md  prek.toml  pyproject.toml  requirements-dev.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: build-and-release.yml  main.yml  test.yml
archivooor/: __main__.py  archiver.py  cli.py  exceptions.py  history.py  key_utils.py
tests/: conftest.py  test_archiver.py  test_cli.py  test_history.py  test_key_utils.py  test_sitemap.py
