[project]
name = "archivooor"
version = "0.0.8"
description = "A Python package to submit web pages to the Wayback Machine for archiving."
authors = [
    { name = "Barabazs", email = "31799121+Barabazs@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "click>=8.1.8",
    "keyring>=25.6.0",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/Barabazs/archivooor"
Repository = "https://github.com/Barabazs/archivooor"

[project.scripts]
archivooor = "archivooor.cli:cli"

[dependency-groups]
dev = ["mypy>=1.15.0", "pre-commit>=4.2.0", "ruff>=0.11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "I", # isort
    # "PL", # pylint
    # "E",  # pycodestyle
    # "W",  # pycodestyle

]
