[project]
name = "archivooor"
version = "0.0.8"
description = "A Python package to submit web pages to the Wayback Machine for archiving."
authors = [
    { name = "Barabazs", email = "31799121+Barabazs@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "click>=8.1.8",
    "keyring>=25.6.0",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/Barabazs/archivooor"
Repository = "https://github.com/Barabazs/archivooor"

[project.scripts]
archivooor = "archivooor.cli:cli"

[dependency-groups]
dev = ["mypy>=1.15.0", "prek>=0.3.8", "ruff>=0.11.0"]

[tool.uv]
exclude-newer = "1 week"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "I", # isort
    # "PL", # pylint
    # "E",  # pycodestyle
    # "W",  # pycodestyle

]
